kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/unknownFunction2.sem

function myFunction(): Integer {
  Namespace.someBadFunctionName()
}
